# oai-coding-agent

./: .cursor-updates  .cursorrules  .env-example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  cli.py  main.py  mypy.ini  prompt.py  pyproject.toml  rich_tui.py  test_fullscreen.py  tui-claude.py  tui.py  ui.py
.github/workflows/: deploy.yml  issue-agent.yml  oai-agent.yaml  oai-agent.yml
docs/: arch.md  cli.md  cli_refactor_design.md  preflight.md  refactoring_roadmap.md
docs/claude/: async-agent-arch-design.md  current-vs-proposed.md  e2e-sequence.md
infrastructure/: README.md
infrastructure/charts/: cloudnativepg-values.yaml
infrastructure/kustomize/base/: app-deployment.yaml  app-hpa.yaml  app-service.yaml  cluster.yaml  kustomization.yaml  pgadmin-deployment.yaml  servicemonitor.yaml
infrastructure/scripts/: bootstrap-operator.sh
python-app/: Dockerfile  app.py  requirements.txt
src/oai_coding_agent/: __init__.py  agent.py  cli.py  config.py  headless.py  interrupt_handler.py  logger.py  main.py  mcp_servers.py  mcp_tool_selector.py  preflight.py  rich_tui.py  runtime_config.py
src/oai_coding_agent/agent/: __init__.py  agent.py  dynamic_context.py  event_mapper.py  events.py  instruction_builder.py  mcp_project_context.py  mcp_servers.py  mcp_tool_selector.py  project_context.py
src/oai_coding_agent/auth/: github_browser_auth.py  token_storage.py
src/oai_coding_agent/console/: __init__.py  agent_dialog.py  callbacks.py  console.py  headless.py  (+13 more)
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_config.py  test_github_browser_auth.py  test_install_commit_msg_hook.py  test_interrupt_handling.py  test_key_bindings.py  test_logger.py  test_mcp_servers.py  test_mcp_tool_selector.py  test_openai_console.py  test_preflight.py  test_rendering.py  test_repl.py  test_runtime_config.py  test_slash_commands.py  test_state.py  test_token_storage.py
tests/agent/: test_agent.py  test_async_agent.py  test_event_mapper.py  test_events.py  test_headless_agent.py  test_instruction_builder.py  test_mcp_servers.py  test_mcp_tool_selector.py
tests/auth/: test_github_browser_auth.py  test_token_storage.py
tests/console/: test_console.py  test_github_console.py  test_github_workflow_console.py  test_headless_console.py  test_key_bindings.py  test_key_bindings_handler.py  test_rendering.py  test_repl_console.py  test_repl_console_usage.py  test_repl_prompt.py  test_slash_handler.py  test_token_animator.py  test_ui_event_mapper.py
tests/github/: test_github_browser_auth.py  test_token_storage.py
tests/preflight/: test_commit_hook.py  test_git_repo.py  test_install_commit_msg_hook.py  test_preflight.py  test_preflight_utils.py
typings/: typer.pyi
typings/agents/: __init__.pyi  mcp.pyi
typings/mcp/: __init__.pyi
typings/rich/: __init__.pyi  console.pyi  markdown.pyi  panel.pyi
ui-temp/: slash_ui_clean.py  ui-multi-claude.py  ui-multi-o3.py  ui-ptk.py
(+34 files in other folders)
