[project]
name = "oai-coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "concurrent-log-handler>=0.9.26",
    "openai-agents[litellm]>=0.0.15",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.0.0",
    "textual>=3.2.0",
    "typer>=0.15.4",
]

[project.scripts]
oai = "oai_coding_agent.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pre-commit>=3.7.1",
    "ruff>=0.4.4",
]

[tool.ruff]
target-version = "py311"
line-length = 88
