[project]
name = "oai-coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "concurrent-log-handler>=0.9.26",
    "openai-agents[litellm]>=0.0.15",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.0.0",
    "Jinja2>=3.0.0",
    "textual>=3.2.0",
    "typer>=0.15.4",
    "cli-mcp-server>=0.1.0",
    "mcp-server-git>=2025.1.14",
]

[project.scripts]
oai = "oai_coding_agent.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pre-commit>=3.7.1",
    "ruff>=0.4.4",
    "pytest-cov>=6.1.1",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=oai_coding_agent --cov-report=term-missing"
