[project]
name = "oai-coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "concurrent-log-handler>=0.9.26",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.0.0",
    "Jinja2>=3.0.0",
    "typer>=0.15.4",
    "cli-mcp-server>=0.1.0",
    "mcp-server-git>=2025.1.14",
    "openai-agents>=0.0.16",
    "rich>=14.0.0",
    "gitpython>=3.1.44",
    "docker>=7.1.0",
    "requests>=2.31.0",
]

[project.scripts]
oai = "oai_coding_agent.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pre-commit>=3.7.1",
    "ruff>=0.4.4",
    "pytest-cov>=6.1.1",
    "mypy>=1.16.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff.lint]
preview = true
# "I" = imports are sorted (following isort rules above)
# "PLC0415" = all imports must be at top of the file, imports within functions are not allowed
extend-select = ["I", "PLC0415"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
incremental = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=oai_coding_agent --cov-report=term-missing"
